# EoBuildingReview

./: .buildinfo  README.md  biblio.html  genindex.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: book.yml
INRIA_V2/: intro.html
_sources/datasets/: intro.md
datasets/: intro.html
docs/: _config.yml  _toc.yml  biblio.md  intro.md  references.bib
docs/INRIA_V2/: austin.md  download_raw.md  earth_explorer_download.md  intro.md
docs/datasets/: inria.md  intro.md
records/articles/: 17BIS.json  17MAG.json  18HUA.json  18IGL.json  19CHA.json  19JI.json  19KAN.json  19LIU.json  20DIN.json  20LIU.json  20SHE.json  20ZHO.json  21HE.json  21LI.json  21ZHU.json  21ZOR.json  22GUO.json  22LUZ.json  22QIU.json  22SAR.json  22SHA.json  22WAN.json  23WEN.json  YUA16.json
records/dataset/: INRIA.json
records/metrics/: 17BIS.json  17MAG.json  18HUA.json  18IGL.json  19CHA.json  19JI.json  19KAN.json  19LIU.json  20DIN.json  20LIU.json  20SHE.json  20ZHO.json  21HE.json  21LI.json  21ZHU.json  21ZOR.json  22GUO.json  22LUZ.json  22QIU.json  22SAR.json  22SHA.json  22WAN.json  23WEN.json
src/eobuilding_fair_inria/cli/: download_footprints.py  download_raw_img.py  footprints_from_img.py  tile_footprints.py  tile_sampling.py
src/eobuilding_fair_inria/download/: earth_explorer.py  utils.py
